# wings

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: avro_schema.yaml  schema.yaml  table.yaml
examples/data/: datum.csv  datum_2.csv
scripts/: generate_dataset.py
src/: async_loader.rs  data_loader.rs  display_row.rs  for_loop_loader.rs  main.rs  metadata.rs  program.rs  query_parser.rs  rayon_loader.rs  utils.rs
