[package]
name = "wings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.0"
dirs = "5.0.1"
log = "0.4.21"
rayon = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
simple_logger = "4.3.3"
sqlite = "0.34.0"
walkdir = "2"
pad = "0.1"
apache-avro = "0.16.0"
serde_json = "1.0.117"
